--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,11 @@ concurrency:
 jobs:
     deploy:
         runs-on: ubuntu-latest
+
+        strategy:
+            matrix:
+                node-version: [22.x]
+
         steps:
             - name: Checkout
               uses: actions/checkout@v4
