--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -117,7 +117,7 @@ jobs:
             - name: Generate HTML from Markdown in Docs/
               if: ${{ !cancelled() }}
               id: markdown-docs
-              uses: ldeluigi/markdown-docs@latest
+              uses: ldeluigi/markdown-docs@v1.5.0
               with:
                   src: docs
                   dst: dist/docs/
@@ -143,5 +143,5 @@ jobs:
                   path: "dist/"
             - name: Deploy to GitHub Pages
               id: deployment
-              uses: actions/deploy-pages@v2
+              uses: actions/deploy-pages@v4
               if: ${{ !cancelled() }}
