--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -117,7 +117,7 @@ jobs:
             - name: Generate HTML from Markdown in Docs/
               if: ${{ !cancelled() }}
               id: markdown-docs
-              uses: ldeluigi/markdown-docs@v1.5.0
+              uses: ldeluigi/markdown-docs@latest
               with:
                   src: docs
                   dst: dist/docs/
