--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,26 +24,29 @@ concurrency:
 jobs:
     deploy:
         runs-on: ubuntu-latest
+        strategy:
+          matrix:
+            node-version: [20]
         steps:
             - name: Checkout
               uses: actions/checkout@v4
               with:
                   fetch-depth: 0
-            - name: Use Node.js ${{ matrix.node-version }}
+            - name: Setup Node.js
               uses: actions/setup-node@v3
               with:
                   node-version: ${{ matrix.node-version }}
-            - id: get-repo-values
-              name: Get repository values
-              run: |
-                  url=https://$(echo "${{github.repository}}" | sed "s/\//.github.io\//")
-                  echo "url=$url" >> $GITHUB_OUTPUT
+            #- id: get-repo-values
+            #  name: Get repository values
+            #  run: |
+            #      url=https://$(echo "${{github.repository}}" | sed "s/\//.github.io\//")
+            #      echo "url=$url" >> $GITHUB_OUTPUT
             - name: Update package.json homepage
               uses: jossef/action-set-json-field@v1
               with:
                   file: package.json
                   field: homepage
-                  value: ${{ steps.get-repo-values.outputs.url }}
+                  value: "https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}"
             # create_redirects
             - name: Create Redirects and Links
               id: create_redirects
@@ -93,8 +96,8 @@ jobs:
                   echo "* [Tests](../tests.html)" >> docs/quick-links.md
             # Verify Integrity
             - name: Verify Integrity
-              if: ${{ !cancelled() }}
-              id: integrity
+              #if: ${{ !cancelled() }}
+              #id: integrity
               run: |
                   echo "<html><body><pre>" > ./dist/integrity.html
                   find src -type f -name "*.test.ts" -exec md5sum {} + >> ./dist/integrity.html
@@ -107,16 +110,16 @@ jobs:
                   echo "* [Integrity](../integrity.html)" >> docs/quick-links.md
             # Create GitInspector Report
             - name: Create GitInspector Report
-              if: ${{ !cancelled() }}
-              id: gitinspector
+              #if: ${{ !cancelled() }}
+              #id: gitinspector
               run: |
                   git clone https://github.com/jpwhite3/gitinspector.git
                   python ./gitinspector/gitinspector.py ./ --grading --format=html -f tsx,ts,html,css -x ./gitinspector -x ./node_modules -x ./wbcore > ./dist/git.html
                   echo "* [Git Inspector](../git.html)" >> docs/quick-links.md
             # Generate HTML from Markdown in Docs/
             - name: Generate HTML from Markdown in Docs/
-              if: ${{ !cancelled() }}
-              id: markdown-docs
+              #if: ${{ !cancelled() }}
+              #id: markdown-docs
               uses: ldeluigi/markdown-docs@latest
               with:
                   src: docs
@@ -138,10 +141,12 @@ jobs:
               if: ${{ !cancelled() }}
             - name: Upload artifact
               uses: actions/upload-pages-artifact@v4
-              if: ${{ !cancelled() }}
+              #if: ${{ !cancelled() }}
               with:
                   path: "dist/"
             - name: Deploy to GitHub Pages
               id: deployment
               uses: actions/deploy-pages@v4
-              if: ${{ !cancelled() }}
+              #if: ${{ !cancelled() }}
+            - name: Show deployed URL
+              run: echo Evaluated environment url ${{ steps.deployment.outputs.page_url }}"
